--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@supabase/ssr": "^0.5.1",
+		"@tanstack/react-query": "^5.59.4",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
