--- a/package.json
+++ b/package.json
@@ -29,6 +29,15 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"@supabase/ssr": "^0.5.1",
 		"@tanstack/react-query": "^5.59.4",
+		"@uppy/aws-s3": "^4.1.0",
+		"@uppy/core": "^4.2.2",
+		"@uppy/dashboard": "^4.1.1",
+		"@uppy/drag-drop": "^4.0.3",
+		"@uppy/file-input": "^4.0.2",
+		"@uppy/progress-bar": "^4.0.0",
+		"@uppy/react": "^4.0.2",
+		"@uppy/status-bar": "^4.0.3",
+		"@uppy/tus": "^4.1.2",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
